# fr24-rs

./: Cargo.toml
src/: flight_history.rs  login.rs  main.rs
