[package]
name = "fr24"
version = "0.1.0"
edition = "2021"
authors = ["Robin Gloster <mail@glob.in>"]
description = "FlightRadar24 API"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = [ "serde" ] }
clap = { version = "4.0.9", features = [ "derive", "env" ] }
futures = "0.3"
reqwest = { version = "0.11.12", features = [ "rustls-tls", "json" ], default-features = false }
serde = { version = "1.0.145", features = [ "derive" ] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = [ "macros", "rt-multi-thread", "signal" ] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [ "std", "fmt", "env-filter" ] }
